fix padding on small screens

--- a/css/site.css
+++ b/css/site.css
@@ -326,7 +326,7 @@ li.page, li.previous, li.next,
 @media only screen and (max-width:767px) {
     .post-aside,
     .post-aside-share {
-		margin-left: -230px;
+		display: none;
     }
 	.post-container,
 	.post-content,
